--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
     "ipfs-api": "^20.2.1",
+    "mongoose": "^5.1.2",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
     "sc2-sdk": "^1.0.2",
     "serve-favicon": "~2.4.5"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
