--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.15.5",
@@ -18,6 +18,7 @@
     "morgan": "~1.9.0",
     "node-cron": "^1.2.1",
     "pug": "2.0.0-beta11",
+    "request": "^2.87.0",
     "sc2-sdk": "^1.0.2",
     "serve-favicon": "~2.4.5",
     "steem": "^0.7.1"
