Add start/stop/restart scripts. Fixed steemconnect issue. Other misc.
Use latest steemconnect library. The package name changed. Previous package is depecrated and no longer works.

Added scripts to start, stop, and restart the service. Only these scripts should be used for starting, stopping, restarting.

Moved mongodb and livePosts.json updates to only happen if post is successfully broadcast to blockchain.

TODO: Add clean up mongodb code to remove entries that refer to deleted or non-existent posts.

TODO: Add code to ensure livePosts.json exists and is valud and to create/recreate the file if needed.

	modified:   .gitignore
	deleted:    livePosts.json
	modified:   modules/steemconnect.js
	modified:   package-lock.json
	modified:   package.json
	new file:   public/imgs/dpornsitelogo.png
	new file:   restart.sh
	new file:   routes/api.js
	modified:   routes/index.js
	modified:   routes/post.js
	new file:   start.sh
	new file:   stop.sh

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
-    "express": "~4.15.5",
+    "express": "^4.16.3",
     "express-sanitize-escape": "^1.1.0",
     "express-session": "^1.15.6",
     "formidable": "^1.2.1",
@@ -19,9 +19,11 @@
     "node-cron": "^1.2.1",
     "pug": "2.0.0-beta11",
     "request": "^2.87.0",
+    "save": "^2.3.2",
     "sc2-sdk": "^1.0.2",
     "serve-favicon": "~2.4.5",
-    "steem": "^0.7.1"
+    "steem": "^0.7.2",
+    "steemconnect": "^2.0.0"
   },
   "devDependencies": {}
 }
